[tool.poetry]
name = "stockyard"
version = "0.1.0"
repository = "https://github.com/joce/stockyard"
homepage = "https://github.com/joce/stockyard"
description = "A Yahoo! finance-based TUI **toy** stock viewer"
authors = ["Jocelyn Legault <jocelynlegault@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytz = { version = "2025.1", python = "<3.11" }
requests = "^2.32"
textual = "^2.1"
tzdata = "^2025.1"
typing_extensions = { version = "^4.12", python = "<3.12" }

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1"
isort = "^6.0.1"
pylint = "^3.3"
pyright = "^1.1"
pytest = "^8.3"
pytest-timeout = "^2.3"
pytest-md = "^0.2"
ruff = "^0.11.0"
textual-dev = "^1.6"

[tool.black]
target-version = ["py39", "py310", "py311", "py312", "py313"]
line-length = 88

[tool.isort]
profile = "black"
py_version = "auto"
skip = ["__pycache__", ".venv", ".git", ".pytest_cache"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
timeout = 10

[tool.ruff]
exclude = [
    "__pycache__",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
]
# Same as Black
line-length = 88
indent-width = 4
# Target our oldest supported Python version
target-version = "py39"

[tool.ruff.format]
# Like Black
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",

    "ERA",
    "UP",
    "PL",
    "FLY",
    "PERF",
    "FURB",
    "DOC",
    "RUF",
    "TRY",
    "D",
    #"AIR",  # not using airflow
    #"FAST", # not using fastapi
    #"C90",  # later?
    #"NPY",  # not using numpy
    #"PD",   # not using pandas

    # Flake8 checks
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "FA",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TC",
    "ARG",
    "PTH",
    "PGH",
    #"CPY", # not interested
    #"DJ",  # not using Django
    #"EXE", # not using shebangs (at the moment at least)
    #"FIX", # not interested
    #"TD",  # later?
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
ignore = [
    "D105",   # Missing docstring in magic method
    "D202",   # No blank lines allowed after function docstring
    "D203",   # 1 blank line required before class docstring
    "D212",   # Multi-line docstring summary should start at the first line
    "D413",   # Missing blank line after last section
    "COM812", # Trailing comma missing
]
preview = true

[tool.ruff.lint.per-file-ignores]
# Disable Ruff some rules for tests.
"tests/*" = [
    "S101",    # Use of assert
    "SLF001",  # Private member access
    "PLC2701", # Private name import `xxx` from external module `yyy
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
